# DisCODe

Processors/: CMakeLists.txt
Processors/KS_CvMat2MagickImage/zxing/: .sconsign.dblite
Processors/KS_MagickImage2CvMat/: CMakeLists.txt
Tasks/: KS_ImgConvTest.xml
cmake/modules/: FindSCons.cmake
share/Tasks/KS/: KS_ImgConvTest.xml  MS_Barcode.xml
src/Processors/: CMakeLists.txt
src/Processors/KS_BCReader/: CMakeLists.txt  KS_BCReader.cpp
src/Processors/KS_BarcodeReader/: CMakeLists.txt  KS_BarcodeReader.cpp  KS_BarcodeReader.hpp
src/Processors/KS_BarcodeReader/zxing_src/: .sconsign.dblite  CMakeLists.txt
src/Processors/KS_CvMat2MagickImage/: CMakeLists.txt  KS_CvMat2MagickImage.cpp  KS_CvMat2MagickImage.hpp
src/Processors/KS_MagickImage2CvMat/: CMakeLists.txt  KS_MagickImage2CvMat.cpp  KS_MagickImage2CvMat.hpp
src/Processors/KS_ROICrop/: CMakeLists.txt  KS_ROICrop.cpp  KS_ROICrop.hpp
src/Sinks/CvWindow/: CvWindow_Sink.cpp
src/Types/: DrawableContainer.hpp  Rectangle.hpp
